home-cluster/adsb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adsb-ultrafeeder
  namespace: adsb
  labels:
    alert-on-down: "true"
  annotations:
    secret.reloader.stakater.com/reload: "adsb-secrets"
spec:
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: adsb-ultrafeeder
  template:
    metadata:
      labels:
        app: adsb-ultrafeeder
    spec:
      nodeSelector:
        kubernetes.io/hostname: thinkcentre02
      containers:
      - name: ultrafeeder
        image: ghcr.io/sdr-enthusiasts/docker-adsb-ultrafeeder:latest-build-316
        resources:
          requests:
            memory: 128Mi
        limits:
          memory: 256Mi
        ports:
        - containerPort: 80
          name: web
        - containerPort: 30002
          name: beast-input
        - containerPort: 30005
          name: beast-output
        securityContext:
          privileged: true
          allowPrivilegeEscalation: true
        volumeMounts:
        - name: usb
          mountPath: /dev/bus/usb
        - name: history
          mountPath: /var/globe_history
        - name: timelapse
          mountPath: /var/timelapse1090
        - name: graphs
          mountPath: /var/lib/collectd
      volumes:
      - name: usb
        hostPath:
          path: /dev/bus/usb
      - name: history
        persistentVolumeClaim:
          claimName: adsb-history
      - name: timelapse
        persistentVolumeClaim:
          claimName: adsb-timelapse
      - name: graphs
        persistentVolumeClaim:
          claimName: adsb-graphs
