home-cluster/adsb/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adsb
  namespace: adsb
  annotations:
    external-dns.alpha.kubernetes.io/hostname: adsb.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adsb.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: adsb-ultrafeeder
          port: 80
